Fix jumpy UI due to short div

--- a/src/data-publication/ChangeLog/ChangeLogTable.css
+++ b/src/data-publication/ChangeLog/ChangeLogTable.css
@@ -1,3 +1,7 @@
+#ChangeLogTable {
+  min-height: 25vh;
+}
+
 #ChangeLogTable .pub-change-item {
   align-items: flex-start;
   padding: 3rem 1rem;
